# grabadora-clases

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  grabadora.py
GrabadoraClases/: App.xaml  App.xaml.cs  AppSettings.cs  GrabadoraClases.csproj  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  notes.py  recordings.py  subjects.py  (+1 more)
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  note.py  recording.py  subject.py  task.py  user.py
backend/app/schemas/: note.py  recording.py  subject.py  task.py  user.py
backend/app/services/: deepgram_service.py  gemini_service.py
backend/tests/: conftest.py  test_auth.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(auth)/: login.tsx  register.tsx
frontend/app/(tabs)/: _layout.tsx  folders.tsx  index.tsx  profile.tsx
frontend/app/notes/: [id].tsx
frontend/app/recording/: [id].tsx  new.tsx  processing.tsx
frontend/constants/: Config.ts  theme.ts
frontend/context/: ThemeContext.tsx
frontend/services/: api.ts  localDb.ts
frontend/src/hooks/: useTaskPolling.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/store/: authStore.ts
src/: main.rs
