[package]
name = "grabadora"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grabadora"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
cpal = "0.15"
whisper-rs = "0.11"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "isomp4"] }
hound = "3.5"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rfd = "0.14"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
